<resources>
    <string name="app_name">TaskMaster</string>
    <string name="task_description">Task Description</string>
    <string name="add_task">Add Task</string>
    <string name="add_task2">ADD TASK</string>
    <string name="task_title">Task title</string>
    <string name="total_tasks">Total Tasks :</string>
    <string name="setting">Setting</string>
    <string name="task_3">Task 3</string>
    <string name="task_1">Task 1</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status">Status</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="team_3">Team 3</string>
    <string name="save">SAVE</string>

    <string name="title">title</string>
    <string name="body">/body</string>
    <string name="todo" />
    <string name="download_the_linked_file" />
    <string name="channel_name" />
    <string name="channel_description" />
</resources>