<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/add_task"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/titleplain"
        android:layout_width="291dp"
        android:layout_height="94dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="My Task
"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="HardcodedText,MissingConstraints" />

    <EditText
        android:id="@+id/descripton"
        android:layout_width="304dp"
        android:layout_height="101dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="Do Something
"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleplain"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:text="@string/add_task2"

        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Status"
        app:layout_constraintVertical_bias="0.506" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_title"
        android:textSize="25dp"

        app:layout_constraintBottom_toBottomOf="@+id/titleplain"
        app:layout_constraintEnd_toEndOf="@+id/titleplain"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titleplain"
        app:layout_constraintTop_toTopOf="@+id/titleplain"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="197dp"
        android:layout_height="40dp"

        android:text="@string/task_description"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/descripton"
        app:layout_constraintEnd_toEndOf="@+id/descripton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/descripton"
        app:layout_constraintTop_toTopOf="@+id/descripton"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/total_tasks"


        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUploadFile"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/Status"
        android:layout_width="296dp"
        android:layout_height="81dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/status"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripton"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="280dp"
        android:layout_height="62dp"
        android:layout_marginBottom="212dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Status">

        <RadioButton
            android:id="@+id/team1"
            android:layout_width="124dp"
            android:layout_height="17dp"
            android:text="Team 1" />

        <RadioButton
            android:id="@+id/team2"
            android:layout_width="125dp"
            android:layout_height="18dp"
            android:text="Team 2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/team3"
            android:layout_width="124dp"
            android:layout_height="19dp"
            android:text="Team 3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="102dp"
        android:layout_height="46dp"
        android:textSize="25dp"
        android:text="Status"
        app:layout_constraintBottom_toBottomOf="@+id/Status"
        app:layout_constraintEnd_toEndOf="@+id/Status"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Status"
        app:layout_constraintTop_toTopOf="@+id/Status"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:text="Back"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ImageView
        android:id="@+id/imageView_showFromS3"
        android:layout_width="181dp"
        android:layout_height="132dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866"
        app:srcCompat="@android:drawable/picture_frame" />

    <Button
        android:id="@+id/btnUploadFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:text="upload_file"
        android:textColor="#403B3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882" />
</androidx.constraintlayout.widget.ConstraintLayout>